<resources>
	<string name="app_name" translatable="false">SimpleHKA</string>
	<string name="app_desc">A mobile client for the IWI HKA system</string>
	<string name="all_help">Help</string>
	<string name="all_success">success</string>
	<string name="all_failed">failed</string>
	<string name="all_personal">Personal</string>
	<string name="all_subjects">Subjects</string>
	<string name="all_teachers">Teachers</string>
	<string name="all_classes">Classes</string>
	<string name="all_rooms">Rooms</string>
	<string name="all_info">Info</string>
	<string name="all_anonymous">Anonymous</string>
	<string name="all_personal_timetable">Personal Timetable</string>
	<string name="all_contact_email">betteruntis@sapuseven.com</string>
	<string name="all_ok">OK</string>
	<string name="all_yes">Yes</string>
	<string name="all_no">No</string>
	<string name="all_close">Close</string>
	<string name="all_cancel">Cancel</string>
	<string name="all_error">Error</string>
	<string name="all_report">Report</string>
	<string name="all_add">Add</string>
	<string name="all_delete">Delete</string>
	<string name="all_reset">Reset</string>
	<string name="all_absences">Absences</string>
	<string name="all_lesson_details">Lesson details</string>
	<string name="all_lesson_cancelled">%1$s (cancelled)</string>
	<string name="all_lesson_irregular">%1$s (irregular)</string>
	<string name="all_lesson_exam">%1$s (exam!)</string>
	<string name="all_lessontopic">Lesson topic</string>
	<string name="all_lessontopic_none">(No topic)</string>
	<string name="all_dialog_absences_checked">Absences checked.</string>
	<string name="all_dialog_absences_not_checked">Absences not checked.</string>
	<string name="all_dialog_datepicker_button_today">Today</string>
	<string name="all_dialog_error_title">Error information</string>
	<string name="all_dialog_error_message">Request ID: %1$d\nError code: %2$d\nError message: %3$s</string>
	<string name="all_dialog_crash_title">Crash log found</string>
	<string name="all_dialog_crash_copied">Crash log copied to clipboard.</string>
	<string name="all_hint_tap_to_edit">(Tap to edit)</string>
	<string name="activity_title_errors">Errors</string>
	<string name="activity_title_free_rooms">Free Rooms</string>
	<string name="activity_title_info_center">Info Center</string>
	<string name="activity_title_messenger">Messenger</string>
	<string name="activity_title_settings">Settings</string>
	<string name="errors_github_attach_file_message">Please attach the compressed log files to this issue.\nThey have been saved to `%1$s`</string>
	<string name="menu_nav_timetables">Timetables</string>
	<string name="menu_infocenter_messagesofday">Messages</string>
	<string name="menu_infocenter_officehours">Office Hours</string>
	<string name="menu_infocenter_events">Events</string>
	<string name="menu_infocenter_absences">Absences</string>
	<string name="mainactivitydrawer_dropdown_show">Show profile list</string>
	<string name="mainactivitydrawer_profile_add">Add a profile</string>
	<string name="mainactivitydrawer_profile_delete_hint">Long-press a profile to edit</string>
	<string name="main_dialog_delete_profile_title">Delete profile?</string>
	<string name="main_dialog_delete_profile_message">Are you sure you want to delete this profile?</string>
	<string name="main_dialog_update_profile_title">Profile update required</string>
	<string name="main_dialog_update_profile_message">A recent app update has changed the way user data is saved. Please update your current profile to continue using the app.</string>
	<string name="main_dialog_update_profile_button">Update profile</string>
	<string name="main_dialog_itemdetails_error_not_found">Item not found</string>
	<string name="main_dialog_itemdetails_image_infos">Info</string>
	<string name="main_dialog_itemdetails_image_homeworks">Homework</string>
	<string name="main_dialog_itemdetails_timeformat">%1$s - %2$s</string>
	<string name="main_last_refreshed">Last refreshed: %1$s</string>
	<string name="main_last_refreshed_never">never</string>
	<string name="main_anonymous_login_info_text">You have to setup a personal timetable if you are logged in as an anonymous user.</string>
	<string name="main_go_to_settings">Go to settings</string>
	<string name="main_drawer_open">Open navigation drawer</string>
	<string name="main_drawer_close">Close navigation drawer</string>
	<string name="main_drawer_image_logo">SimpleHKA Logo</string>
	<string name="main_press_back_double">Press BACK twice to exit</string>
	<string name="main_time_diff_just_now">just now</string>
	<string name="link_input_rss_link">RSS Link</string>
	<string name="link_input_ical_link">iCal Link</string>
	<string name="login_scan_code">Scan QR code</string>
	<string name="login_welcome">Welcome to SimpleHKA!</string>
	<string name="login_please_log_in">Choose one of the following options to login:</string>
	<string name="login_no_results">No results</string>
	<string name="login_search_by_school_name_or_address">Search by school name or address</string>
	<string name="login_manual_data_input">Manual data input</string>
	<string name="logindatainput_adding_user_unknown_error">An unknown error happened while adding the user.</string>
	<string name="logindatainput_anonymous_login">Anonymous login</string>
	<string name="logindatainput_api_url">Untis API path</string>
	<string name="logindatainput_aquiring_app_secret">Acquiring app secret…</string>
	<string name="logindatainput_aquiring_schoolid">Loading school…</string>
	<string name="logindatainput_connecting">Connecting…</string>
	<string name="logindatainput_data_loaded">Data loaded.</string>
	<string name="logindatainput_delete">Delete profile</string>
	<string name="link_input_error_field_empty">This field cannot be empty!</string>
	<string name="link_input_error_invalid_url">Must be a valid URL!</string>
	<string name="logindatainput_error_generic">Error: %1$s</string>
	<string name="logindatainput_error_invalid_school">Invalid school ID!</string>
	<string name="logindatainput_error_invalid_url">Invalid URL!</string>
	<string name="logindatainput_key">Key or Password</string>
	<string name="logindatainput_loading_user_data">Loading user data…</string>
	<string name="logindatainput_login">Login</string>
	<string name="logindatainput_profilename">Profile name (optional)</string>
	<string name="logindatainput_proxy_host">Proxy server (optional)</string>
	<string name="logindatainput_school">School name or ID</string>
	<string name="logindatainput_show_advanced">Show advanced settings</string>
	<string name="logindatainput_skip_app_secret">Skip app secret resolution</string>
	<string name="logindatainput_skip_school_id">Skip school ID resolution</string>
	<string name="logindatainput_title_add">Add profile</string>
	<string name="logindatainput_title_edit">Edit profile</string>
	<string name="logindatainput_username">Username</string>
	<string name="errormessagedictionary_generic">Unknown error</string>
	<string name="errormessagedictionary_invalid_credentials">Wrong username or key!</string>
	<string name="errormessagedictionary_invalid_school">The specified school doesn\'t exist!</string>
	<string name="errormessagedictionary_invalid_server_url">Invalid server URL!</string>
	<string name="errormessagedictionary_invalid_time_settings">Invalid date and/or time settings!</string>
	<string name="errormessagedictionary_no_public_access">Anonymous access is disabled.</string>
	<string name="errormessagedictionary_no_right">No right for timetable</string>
	<string name="errormessagedictionary_server_webuntis_not_installed">The specified Server doesn\'t have WebUntis installed!</string>
	<string name="errormessagedictionary_too_many_results">Too many results</string>
	<string name="errormessagedictionary_user_locked">User locked!</string>
	<string name="roomfinder_current_hour">%1$s, %2$d. Lesson</string>
	<string name="roomfinder_current_hour_time">%1$s - %2$s</string>
	<string name="roomfinder_delete_item">Delete item</string>
	<string name="roomfinder_dialog_itemdelete_text">Are you sure you want to remove this room from the list?</string>
	<string name="roomfinder_dialog_itemdelete_title">Delete %1$s</string>
	<string name="roomfinder_image_availability_indicator">Room availability indicator</string>
	<string name="roomfinder_image_next_hour">next hour</string>
	<string name="roomfinder_image_previous_hour">previous hour</string>
	<string name="roomfinder_item_desc_occupied">This Room is occupied.</string>
	<string name="roomfinder_loading_data">Loading data…</string>
	<string name="roomfinder_no_rooms">No rooms to display.\nTap + to add one!</string>
	<string name="infocenter_absences_empty">No absences</string>
	<string name="infocenter_events_empty">No events</string>
	<string name="infocenter_events_exam_name_long">%1$s - %2$s</string>
	<string name="infocenter_messages_attachments">Attachments</string>
	<string name="infocenter_messages_empty">No messages</string>
	<string name="infocenter_officehours_empty">No office hours</string>
	<string name="infocenter_timeformat">%2$s, %1$s - %4$s, %3$s</string>
	<string name="infocenter_timeformat_sameday">%2$s - %4$s, %1$s</string>
	<string name="infocenter_absence_unknown_reason">Unknown reason</string>
	<string name="elementpicker_hint_search">Search…</string>
	<string name="elementpicker_hint_search_classes">Search for classes…</string>
	<string name="elementpicker_hint_search_rooms">Search for rooms…</string>
	<string name="elementpicker_hint_search_teachers">Search for teachers…</string>
	<string name="preference_automute_cancelled_lessons">Also mute in cancelled lessons</string>
	<string name="preference_automute_enable">Enable auto-mute</string>
	<string name="preference_automute_enable_summary">Automatically turns on Do Not Disturb during lessons</string>
	<string name="preference_automute_mute_priority">Don\'t allow priority events to ignore aute-mute</string>
	<string name="preference_automute_minimum_break_length_summary">Don\'t unmute the device during breaks shorter than the specified length (in minutes)</string>
	<string name="preference_automute_minimum_break_length">Minimum break length</string>
	<string name="preference_background_cancelled">Cancelled lessons</string>
	<string name="preference_background_cancelled_past">Past cancelled lessons</string>
	<string name="preference_background_exam">Lessons with tests</string>
	<string name="preference_background_exam_past">Past lessons with tests</string>
	<string name="preference_background_future">Future day background</string>
	<string name="preference_background_irregular">Irregular lessons</string>
	<string name="preference_background_irregular_past">Past irregular lessons</string>
	<string name="preference_background_past">Past day background</string>
	<string name="preference_background_regular">Regular lessons</string>
	<string name="preference_background_regular_past">Past regular lessons</string>
	<string name="preference_category_connectivity_proxy">WebUntis Proxy</string>
	<string name="preference_category_general_automute">Auto-Mute</string>
	<string name="preference_category_general_behaviour">Behaviour</string>
	<string name="preference_category_general_week_display">Week Display Settings</string>
	<string name="preference_category_notifications_visible_fields">Visible Fields</string>
	<string name="preference_category_styling_backgrounds">Item Colors</string>
	<string name="preference_category_styling_colors">Colors</string>
	<string name="preference_category_styling_themes">Themes</string>
	<string name="preference_category_timetable_item_appearance">Item Appearance</string>
	<string name="preference_category_timetable_lesson_text">Lesson Text</string>
	<string name="preference_category_timetable_range">Timetable Range</string>
	<string name="preference_connectivity_proxy_about">About this feature</string>
	<string name="preference_connectivity_proxy_host">Proxy server host</string>
</resources>