<?xml version="1.0" encoding="utf-8"?>
<merge
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".activities.LinkInputActivity">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingBottom="@dimen/margin_login_scrollview">

			<include layout="@layout/activity_logindatainput_header" />

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/textinputlayout_link_input_rss"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginTop="16dp"
				android:layout_marginEnd="16dp"
				android:hint="@string/link_input_rss_link">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/edittext_link_input_rss"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="text" />

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/textinputlayout_link_input_ical"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginTop="16dp"
				android:layout_marginEnd="16dp"
				android:hint="@string/link_input_ical_link">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/edittext_link_input_ical"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="text" />

			</com.google.android.material.textfield.TextInputLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginTop="16dp"
				android:layout_marginEnd="16dp"
				android:layout_marginBottom="16dp"
				android:gravity="center_vertical|end"
				android:orientation="horizontal">

				<ProgressBar
					android:id="@+id/progressbar_logindatainput_loadingstatus"
					style="?android:attr/progressBarStyleSmall"
					android:layout_width="24dp"
					android:layout_height="24dp"
					android:visibility="gone" />

				<ImageView
					android:id="@+id/imageview_logindatainput_loadingstatussuccess"
					android:layout_width="24dp"
					android:layout_height="24dp"
					android:contentDescription="@string/all_success"
					android:visibility="gone"
					app:srcCompat="@drawable/all_check" />

				<ImageView
					android:id="@+id/imageview_logindatainput_loadingstatusfailed"
					android:layout_width="24dp"
					android:layout_height="24dp"
					android:contentDescription="@string/all_failed"
					android:visibility="gone"
					app:srcCompat="@drawable/all_cross" />

				<TextView
					android:id="@+id/textview_logindatainput_loadingstatus"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:layout_marginEnd="24dp"
					android:layout_weight="1"
					android:text="@string/logindatainput_connecting"
					android:visibility="gone" />

			</LinearLayout>

		</LinearLayout>
	</ScrollView>

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/button_link_input_done"
		style="@style/FabStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|end"
		android:contentDescription="@string/all_ok"
		app:srcCompat="@drawable/all_check"
		app:tint="@android:color/white" />
</merge>
