<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="8dp"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?attr/colorPrimary"
		android:orientation="vertical"
		android:theme="@style/ThemeOverlay.Material3.DayNight.SideSheetDialog">


		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/constraintlayout_mainactivitydrawer_dropdown"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?android:attr/selectableItemBackground"
			android:paddingVertical="8dp"
			android:clickable="true"
			android:focusable="true">

			<TextView
				android:id="@+id/textview_mainactivtydrawer_line1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginTop="8dp"
				android:text="@string/app_name"
				android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
				android:textColor="?android:textColorPrimaryInverse"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginBottom="8dp"
				android:text="@string/app_desc"
				android:textAppearance="@style/TextAppearance.Material3.BodySmall"
				android:textColor="?android:textColorPrimaryInverse"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textview_mainactivtydrawer_line1" />

			<ImageView
				android:id="@+id/imageview_mainactivitydrawer_dropdown_arrow"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="16dp"
				android:contentDescription="@string/mainactivitydrawer_dropdown_show"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:srcCompat="@drawable/ic_arrow_drop_down_colored" />
		</androidx.constraintlayout.widget.ConstraintLayout>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/linearlayout_mainactivitydrawer_dropdown_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:visibility="gone">

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/recyclerview_mainactivitydrawer_profile_list"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

		</androidx.recyclerview.widget.RecyclerView>

		<include layout="@layout/item_profiles_add" />

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginTop="8dp"
			android:background="?colorDivider" />

	</LinearLayout>
</LinearLayout>
